Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49204

[OS X] [Reg: Qt 5.4.1 -> Qt 5.5.0] Poor performance when dragging TreeWidgetItem

XMLWordPrintable

    • macOS
    • 9cb92d106d9de92d25aa29423a59658f152f5791

      When dragging an item from tree view there's a noticeable lag when moving the mouse. This lag didn't exist in Qt 5.4.1.

      Use attached test application to reproduce the issue.

        1. TreeTest.tar.gz
          0.9 kB
          Kimmo Leppälä
        For Gerrit Dashboard: QTBUG-49204
        # Subject Branch Project Status CR V

            tpochep Timur Pocheptsov
            kileppal Kimmo Leppälä
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes