Cocoa integration - do not send move events while in -draggingUpdated:

Looks like it's not a good idea to send constant 'fake' mouse move events while
mouse is actually moving (mouseDragged/rightMouseDragged) + we're receiving
-dragginUpdated:.

Change-Id: Ibed5def3d8f06b764dea6c2cd196e37ca19ce967
Task-number: QTBUG-49204
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@theqtcompany.com>
Reviewed-by: Filipe Azevedo <filipe.azevedo@kdab.com>